--- a/demo/index.html
+++ b/demo/index.html
@@ -60,7 +60,7 @@
       var $totp = document.getElementById('totp');
       var $ttl = document.getElementById('ttl');
 
-      var key = TOTP.randomKey();
+      var key = "YNN7K3FL5RNLCNJ33ROOTL5YBQEHKGZ6";
       var totp = new TOTP(key);
       var qrnode = new AraleQRCode({
         size: 128,
