--- a/demo/index.html
+++ b/demo/index.html
@@ -60,7 +60,7 @@
       var $totp = document.getElementById('totp');
       var $ttl = document.getElementById('ttl');
 
-      var key = "YNN7K3FL5RNLCNJ33ROOTL5YBQEHKGZ6";
+      var key = "czns ka57 ibno 2t64 icvj 46vn egy3 5pnw";
       var totp = new TOTP(key);
       var qrnode = new AraleQRCode({
         size: 128,
